--- a/web_server/html/detector.html
+++ b/web_server/html/detector.html
@@ -1,10 +1,10 @@
 ---
-title: Deauth detector
+title: detector.title
 js: detector
 layout: page
 ---
 <div class="card-container">
-	<div class="settingsHeader">Deauth Detector</div>
+	<div class="settingsHeader">{% t detector.card-1.header %}</div>
 	<div class="card">
 		<div class="card-content">
 			<div class="row inputCheckbox">
