--- a/web_server/html/index.html
+++ b/web_server/html/index.html
@@ -1,19 +1,19 @@
 ---
-title: Scan
+title: scan.title
 inline-js:
   var u = window.location.href; - 1 != u.indexOf("?minimal=true") && (document.body.id = "minimal", document.cookie = "minimal=true");
 js: scan
 layout: page
 ---
 <div class="card-container">
-	<div class="settingsHeader button-header" style="display:inline-block;margin-bottom: 30px">Scan for networks&nbsp;<span id="networksFound"></span>
+	<div class="settingsHeader button-header" style="display:inline-block;margin-bottom: 30px">{% t scan.card-1.header %}&nbsp;<span id="networksFound"></span>
 	</div>
-	<button onclick="scan()" id="apScanStart" class="right button-primary button-header">Scan</button>
+	<button onclick="scan()" id="apScanStart" class="right button-primary button-header">{% t nav.scan %}</button>
 	<div class="card">
 		<table id="apscan"></table>
 		<div class="card-action">
-			<a onclick="window.location='./users'" class="button light">Users</a>
-			<a onclick="window.location='./attack'" class="button right">Attack</a>
+			<a onclick="window.location='./users'" class="button light">{% t nav.users %}</a>
+			<a onclick="window.location='./attack'" class="button right">{% t nav.attack %}</a>
 		</div>
 	</div>
 	<div class="network-info">
