--- a/web_server/html/users.html
+++ b/web_server/html/users.html
@@ -1,17 +1,17 @@
 ---
-title: Users
+title: users.title
 js: users
 layout: page
 ---
 <div class="card-container">
-	<div class="settingsHeader button-header-2" style="display:inline-block;margin-bottom: 30px">Scan for Wi-Fi users <span id="clientsFound"></span></div>
-	<button onclick="scan()" id="startScan" class="button-primary right button-header-2">Scan</button>
+	<div class="settingsHeader button-header-2" style="display:inline-block;margin-bottom: 30px">{% t users.card-1.header %} <span id="clientsFound"></span></div>
+	<button onclick="scan()" id="startScan" class="button-primary right button-header-2">{% t nav.scan %}</button>
 	<div class="card">
 		<table id="users"></table>
 	</div>
 	<hr>
 	<div id="saved-users" class="dn">
-		<div class="settingsHeader button-header" style="display:inline-block;margin-bottom: 30px">Saved users <span id="clientNames"></span></div>
+		<div class="settingsHeader button-header" style="display:inline-block;margin-bottom: 30px">{% t users.card-2.header %} <span id="clientNames"></span></div>
 		<div class="card">
 			<table id="nameList"></table>
 		</div>
@@ -21,17 +21,17 @@ layout: page
 			<div class="row ta-c">
 				<div class="input-container col-6">
 					<input placeholder=" " id="cMac" type="text" required="" min="17" max="17">
-					<label for="cMac">MAC Address</label>
+					<label for="cMac">{% t users.card-3.field-1 %}</label>
 				</div>
 				<div class="input-container col-1"></div>
 				<div class="input-container col-5">
 					<input placeholder=" " id="cName" type="text" required="">
-					<label for="cName">Name</label>
+					<label for="cName">{% t users.card-3.field-2 %}</label>
 				</div>
 			</div>
 		</div>
 		<div class="card-action">
-			<a class="button right" onclick="addClient()">add</a>
+			<a class="button right" onclick="addClient()">{% t users.card-3.button-1 %}</a>
 		</div>
 	</div>
 </div>
