--- a/web_server/html/attack.html
+++ b/web_server/html/attack.html
@@ -69,7 +69,7 @@ layout: page
 		</table>
 		<div class="card-action">
 			<a class="button" onclick="clearSSID()">{% t attack.card-5.button-1 %}</a>
-			<a class="button right" onclick="saveSSID()">{% t attack.card-5.button-2 %}</a>
+			<a class="button right" onclick="saveSSID()">{% t global.save %}</a>
 		</div>
 	</div>
 </div>
