--- a/web_server/html/control.html
+++ b/web_server/html/control.html
@@ -4,11 +4,11 @@ js: control
 layout: page
 ---
 <div class="card-container">
-	<div class="settingsHeader">GPIO Control</div>
+	<div class="settingsHeader">{% t control.card-1.header %}</div>
 	<div class="card">
 		<table id="controlPins"></table>
 		<div class="card-action">
-			<a onclick="resetPins()" class="button right">Reset entries</a>
+			<a onclick="resetPins()" class="button right">{% t control.card-1.button-1 %}</a>
 		</div>
 	</div>
 </div>
