--- a/web_server/html/info.html
+++ b/web_server/html/info.html
@@ -8,7 +8,7 @@ layout: page
 	<div class="card">
 		<div class="card-content">
 			<p>
-				Wi-PWN was designed by <a href="https://samdenty99.github.io/about" tabindex="-1"><b>Sam Denty</b></a>, from the original project by spacehuhn. Wi-PWN is released under the <a href="https://creativecommons.org/licenses/by-nc/4.0/">CC BY-NC 4.0</a> license.
+				Wi-PWN was designed by <a href="https://samdenty99.github.io/about" tabindex="-1" target="blank_"><b>Sam Denty</b></a>, from the original project by <a href="https://spacehuhn.de" tabindex="-1" target="blank_">spacehuhn &#128020;</a>. Wi-PWN is released under the <a href="https://creativecommons.org/licenses/by-nc/4.0/">CC BY-NC 4.0</a> license.
 			</p>
 			<a href="https://samdenty99.github.io">
 				<h2 class="center a light-text">
