--- a/web_server/html/setup.html
+++ b/web_server/html/setup.html
@@ -44,13 +44,13 @@
 									<div class="col-6">
 										<div class="input-container">
 											<input placeholder=" " id="ssid" type="text" required="" minlength="1" maxlength="32" value="Wi-PWN">
-											<label for="ssid">{% t setup.page-2.card.field-1 %}</label>
+											<label for="ssid">{% t global.ssid %}</label>
 										</div>
 									</div>
 									<div class="col-6">
 										<div class="input-container">
 											<input placeholder=" " id="password" type="text" required="" minlength="8" maxlength="32" value="rootaccess">
-											<label for="ssid">{% t setup.page-2.card.field-2 %}</label>
+											<label for="ssid">{% t setup.page-2.card.field-1 %}</label>
 										</div>
 									</div>
 									<br>
@@ -64,7 +64,7 @@
 								</div>
 							</div>
 							<div class="card-action" onclick="cont()">
-								<a class="button right">{% t setup.page-2.card.field-2 %}</a>
+								<a class="button right">{% t setup.page-2.card.button %}</a>
 							</div>
 						</div><div id="c3">
 							<div class="card-content">
