--- a/web_server/html/users.html
+++ b/web_server/html/users.html
@@ -26,7 +26,7 @@ layout: page
 				<div class="input-container col-1"></div>
 				<div class="input-container col-5">
 					<input placeholder=" " id="cName" type="text" required="">
-					<label for="cName">{% t users.card-3.field-2 %}</label>
+					<label for="cName">{% t global.name %}</label>
 				</div>
 			</div>
 		</div>
