--- a/web_server/html/index.html
+++ b/web_server/html/index.html
@@ -6,7 +6,8 @@ js: scan
 layout: page
 ---
 <div class="card-container">
-	<div class="settingsHeader button-header" style="display:inline-block;margin-bottom: 30px">{% t scan.card-1.header %}&nbsp;<span id="networksFound"></span>
+	<div class="settingsHeader button-header" style="display:inline-block;margin-bottom: 30px">
+		{{site.translations[site.lang].scan.card-1.header | replace_first: '$$', '<span id="networksFound"></span>'}}
 	</div>
 	<button onclick="scan()" id="apScanStart" class="right button-primary button-header">{% t nav.scan %}</button>
 	<div class="card">
