--- a/web_server/html/setup.html
+++ b/web_server/html/setup.html
@@ -1,6 +1,7 @@
 ---
 ---
 <head>
+	<meta charset="UTF-8">
 	<title>Wi-PWN</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=0">
 	<link rel="stylesheet" href="./main.css">
